--- a/api_smaeda/public/index.html
+++ b/api_smaeda/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AAA</title>
+    <title>Document API</title>
 </head>
 <body>
     <h1>Contenido Publico</h1>
